--- a/app/src/at-nguyenha/res/layout/activity_laucher.xml
+++ b/app/src/at-nguyenha/res/layout/activity_laucher.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="asiantech.internship.summer.savedata.activity.LaucherActivity">
+    tools:context="asiantech.internship.summer.savedata.activity.SplashScreenActivity">
 
     <ImageView
         android:layout_width="wrap_content"
