--- a/app/src/at-nguyenha/res/layout/fragment_to_do.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_to_do.xml
@@ -1,7 +1,23 @@
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recyclerToDo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_background"
-    tools:context="asiantech.internship.summer.savedata.fragment.ToDoFragment" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="asiantech.internship.summer.savedata.fragment.ToDoFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerToDo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_background" />
+
+    <ProgressBar
+        android:id="@+id/progressLoadMore"
+        android:visibility="invisible"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
