--- a/app/src/at-uyennguyen/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_edit_profile.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:orientation="vertical">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgAvatarProfile"
@@ -24,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
-            android:text="User name"
+            android:text="@string/user_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imgAvatarProfile" />
 
@@ -35,7 +37,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
-            android:hint="Your user name"
+            android:hint="@string/your_user_name"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
-            android:text="Nick name"
+            android:text="@string/nick_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edtUsernameEdit" />
 
@@ -58,7 +60,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
-            android:hint="Your nickname"
+            android:hint="@string/your_nickname"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
-            android:text="Password"
+            android:text="@string/password"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtNicknameEdit" />
 
@@ -81,7 +83,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
-            android:hint="Your password"
+            android:hint="@string/your_password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -95,14 +97,15 @@
             android:layout_marginTop="60dp"
             android:layout_marginEnd="60dp"
             android:background="@drawable/button"
-            android:text="EDIT"
+            android:text="@string/edit"
             android:textColor="@android:color/white"
             app:layout_constraintTop_toBottomOf="@id/edtPasswordEdit" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@id/btnEdit"/>
+            app:layout_constraintTop_toBottomOf="@id/btnEdit" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
