--- a/app/src/at-uyennguyen/res/layout/fragment_home_todo.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_home_todo.xml
@@ -7,10 +7,20 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/green">
+        android:id="@+id/framLayoutHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayoutTodo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPagerOfTabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="50dp" />
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
