--- a/app/src/at-uyennguyen/res/layout/item_header_profile.xml
+++ b/app/src/at-uyennguyen/res/layout/item_header_profile.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/header">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -14,7 +13,7 @@
         android:layout_marginTop="35dp"
         android:src="@drawable/img_avatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvUserName"
@@ -25,15 +24,14 @@
         android:textSize="17dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/imgAvatarProfile"
-        app:layout_constraintTop_toBottomOf="@id/imgAvatarProfile"
-        android:text="uyennguyen"/>
+        app:layout_constraintTop_toBottomOf="@id/imgAvatarProfile" />
+
     <TextView
         android:id="@+id/tvNicknameHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="helooooooo"
+        android:layout_marginTop="10dp"
         android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/tvUserName"
         app:layout_constraintStart_toStartOf="@id/tvUserName"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tvUserName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
