--- a/app/src/at-cuongle/res/layout/fragment_user_profile.xml
+++ b/app/src/at-cuongle/res/layout/fragment_user_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_mode_edit_black_24dp"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-        app:layout_constraintTop_toTopOf="@+id/imgAvatarProfile" />
+        app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
 
     <TextView
         android:id="@+id/tvDot"
@@ -63,7 +63,7 @@
         android:textColor="@color/color_black"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-        app:layout_constraintTop_toTopOf="@+id/imgAvatarProfile" />
+        app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
 
     <TextView
         android:id="@+id/tvMyKitchen"
@@ -104,7 +104,7 @@
         android:background="@color/color_gray"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/imgAvatarProfile" />
+        app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeft"
