--- a/app/src/at-hauha/res/layout/fragment_profile.xml
+++ b/app/src/at-hauha/res/layout/fragment_profile.xml
@@ -71,7 +71,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgAvatarProfile" />
+            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />
 
         <TextView
             android:id="@+id/tvFullName"
