--- a/app/src/at-hauha/res/layout/fragment_registry.xml
+++ b/app/src/at-hauha/res/layout/fragment_registry.xml
@@ -145,7 +145,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.465"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtPasswordLogin"
+            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
             tools:targetApi="o" />
 
         <TextView
