--- a/app/src/at-nguyenha/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_edit_profile.xml
@@ -63,7 +63,7 @@
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgAvatarProfile" />
+            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />
 
         <TextView
             android:id="@+id/tvFullNameEdit"
