--- a/app/src/at-hauha/res/layout/item_list.xml
+++ b/app/src/at-hauha/res/layout/item_list.xml
@@ -90,7 +90,7 @@
         android:layout_width="@dimen/dimen_15"
         android:layout_height="@dimen/dimen_15"
         android:layout_marginStart="@dimen/dimen_20"
-        android:layout_marginTop="@dimen/width_8"
+        android:layout_marginTop="@dimen/dimen_8"
         android:gravity="center"
         android:src="@drawable/ic_favorite_black_24dp"
         tools:text="@string/textview_likes"
