--- a/app/src/at-nguyenha/res/layout/item_newfeed.xml
+++ b/app/src/at-nguyenha/res/layout/item_newfeed.xml
@@ -43,7 +43,7 @@
         android:layout_height="375dp"
         android:layout_marginTop="10dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_hamburger"
+        tools:src="@drawable/ic_hamburger"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgAvatar" />
