--- a/app/src/at-hauha/res/layout/activity_recylerview.xml
+++ b/app/src/at-hauha/res/layout/activity_recylerview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/newfeedContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
@@ -18,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="@dimen/dimen_40"
@@ -30,5 +30,11 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/itemRefresh" />
-
+    <ImageView
+        android:id="@+id/imgAdd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_control_point_grey_800_24dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
