--- a/app/src/at-cuongle/res/layout/row_item.xml
+++ b/app/src/at-cuongle/res/layout/row_item.xml
@@ -5,6 +5,16 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="@dimen/width_30dp"
+        android:layout_height="@dimen/width_30dp"
+        android:background="@drawable/ic_delete_sweep_black_24dp"
+        android:stateListAnimator="@null"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+        app:layout_constraintLeft_toRightOf="@+id/imgAvatar"
+        app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
+
     <ImageView
         android:id="@+id/imgFood"
         android:layout_width="@dimen/width_0_dp"
