--- a/app/src/at-nguyenha/res/layout/fragment_new_feed.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_new_feed.xml
@@ -12,7 +12,6 @@
         android:id="@+id/tbNewFeed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         app:titleTextColor="@android:color/white"
         app:title="NewFeed" />
 
@@ -20,6 +19,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:id="@+id/progressLoadData"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="visible"/>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/srlRefreshItem"
@@ -40,14 +49,12 @@
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:indeterminate="true"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.536"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
