--- a/app/src/at-hauha/res/layout/fragment_newfeed.xml
+++ b/app/src/at-hauha/res/layout/fragment_newfeed.xml
@@ -28,7 +28,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgBackGround"
-        tools:ignore="UnusedAttribute" />
+        tools:ignore="TextFields,UnusedAttribute"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/tvStatus"
@@ -40,7 +41,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvName"
-        tools:ignore="UnusedAttribute" />
+        tools:ignore="TextFields,UnusedAttribute"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/tvFoodName"
@@ -52,7 +54,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvStatus"
-        tools:ignore="UnusedAttribute" />
+        tools:ignore="Autofill,TextFields,UnusedAttribute" />
 
     <EditText
         android:id="@+id/tvPreview"
@@ -64,9 +66,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvFoodName"
-        tools:ignore="UnusedAttribute" />
+        tools:ignore="Autofill,TextFields,UnusedAttribute" />
 
     <TextView
+        android:id="@+id/btnSave"
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
