--- a/app/src/at-uyennguyen/res/layout/newfeed_item.xml
+++ b/app/src/at-uyennguyen/res/layout/newfeed_item.xml
@@ -6,14 +6,14 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imgEllipsis"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:id="@+id/imgAdd"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
-        android:src="@drawable/img_ellipsis"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
+        android:src="@drawable/ic_add"
+        app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/imgPicture"
@@ -31,7 +31,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/img_heart_black"
+        android:src="@drawable/ic_heart_black"
         app:layout_constraintLeft_toLeftOf="@+id/imgAvatar"
         app:layout_constraintTop_toBottomOf="@+id/imgPicture" />
 
@@ -40,7 +40,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
-        android:src="@drawable/img_comment"
+        android:src="@drawable/ic_comment"
         app:layout_constraintStart_toEndOf="@id/imgHeart"
         app:layout_constraintTop_toTopOf="@id/imgHeart" />
 
@@ -49,7 +49,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
-        android:src="@drawable/img_share"
+        android:src="@drawable/ic_share"
         app:layout_constraintStart_toEndOf="@id/imgComment"
         app:layout_constraintTop_toTopOf="@id/imgHeart" />
 
@@ -57,8 +57,8 @@
         android:id="@+id/imgDelete"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/img_delete"
-        app:layout_constraintEnd_toEndOf="@+id/imgEllipsis"
+        android:src="@drawable/ic_delete"
+        app:layout_constraintEnd_toEndOf="@+id/imgAdd"
         app:layout_constraintTop_toTopOf="@+id/imgShare" />
 
     <ImageView
@@ -67,7 +67,7 @@
         android:layout_height="25dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/img_h"
+        android:src="@drawable/ic_heart_little"
         app:layout_constraintLeft_toLeftOf="@id/imgHeart"
         app:layout_constraintTop_toBottomOf="@id/imgHeart" />
 
@@ -163,3 +163,4 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
