--- a/app/src/at-nguyenha/res/layout/activity_canvas_main.xml
+++ b/app/src/at-nguyenha/res/layout/activity_canvas_main.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/flMainActivity"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="asiantech.internship.summer.canvas.CanvasMainActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context="asiantech.internship.summer.canvas.CanvasMainActivity" />
