--- a/app/src/at-nguyenha/res/layout/fragment_chess_table.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_chess_table.xml
@@ -6,8 +6,8 @@
     tools:context="asiantech.internship.summer.canvas.ChessTableFragment">
 
     <asiantech.internship.summer.canvas.ChessTableView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
