--- a/app/src/at-cuongle/res/layout/fragment_weight_chart.xml
+++ b/app/src/at-cuongle/res/layout/fragment_weight_chart.xml
@@ -1,17 +1,12 @@
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-
-        <asiantech.internship.summer.canvas.WeightCanvasView
-            android:layout_width="1000dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="4dp" />
-    </RelativeLayout>
-</HorizontalScrollView>
+    <asiantech.internship.summer.canvas.WeightCanvasView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="4dp" />
+</RelativeLayout>
