--- a/app/src/at-nguyenha/res/layout/fragment_graph.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_graph.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-        <asiantech.internship.summer.canvas.GraphView
-            android:layout_width="1000dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp" />
-    </RelativeLayout>
 
-</HorizontalScrollView>
+    <asiantech.internship.summer.canvas.GraphView
+            android:layout_width="1000dp"
+            android:layout_height="match_parent" />
+
+</FrameLayout>
