--- a/app/src/at-hauha/res/layout/fragment_weightchart.xml
+++ b/app/src/at-hauha/res/layout/fragment_weightchart.xml
@@ -4,7 +4,8 @@
     android:fillViewport="true">
 
     <asiantech.internship.summer.canvas.WeightChart
-        android:layout_width="1500dp"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
