--- a/app/src/at-nguyenha/res/layout/fragment_graph.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_graph.xml
@@ -5,7 +5,8 @@
     android:fillViewport="true">
 
     <asiantech.internship.summer.canvas.GraphView
-            android:layout_width="1000dp"
-            android:layout_height="match_parent" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+        android:layout_margin="20dp"/>
 
 </FrameLayout>
